Feature/getfollow
